# semantic-kill-switch

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: 1_layerwise_delta_norm.py  2_lowrank_pca_test.py  3_logit_lens_delta.py  4_base_vs_finetuned_adl.py  run_all_analyses.py
data/SDF/: finetune.py  generate_dataset.py  training_log.txt
data/kill_switch/: README.md  README_ANALYSES.md
datasets/: generate_behavioral_dataset.py
qwen_shutdown_finetuned/: added_tokens.json
qwen_shutdown_finetuned/checkpoint-32/: adapter_config.json  tokenizer_config.json  trainer_state.json
